# snapshotfs

./: .gitignore  .versionrc.js  CHANGELOG.md  Cargo.toml  README.md  shell.nix
.github/workflows/: build-and-publish.yml
src/: block_io.rs  main.rs  metadata.rs  pax.rs  singlefs.rs  snapshot_fs.rs  snapshotfs.rs  utils.rs
