[package]
name = "snapshotfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
fuser = "0.12"
libc = "0.2"
log = "0.4"
env_logger = "0.9"
tar = "0.4"
walkdir = "2"

