[package]
name = "snapshotfs"
version = "0.1.1"
edition = "2021"
authors = ["DCsunset"]
description = "A fuse-based read-only filesystem to provide a snapshot view (tar archives) of directories or files without actually creating the archives"
readme = "README.md"
repository = "https://github.com/DCsunset/snapshotfs"
license = "AGPL-3.0"
keywords = ["fs", "fuse", "snapshot", "tar", "archive"]
categories = ["filesystem", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
fuser = { version = "0.12", default-features = false }
libc = "0.2"
log = "0.4"
env_logger = "0.9"
tar = "0.4"
walkdir = "2"

